public/style.css
.divborder{
    border: 3px solid #73AD21;
}

* {
    font-family: 'Trebuchet MS', sans-serif;
}

body {
  margin: 0;
}

nav {
    display:inline-block;
}

a:hover {
    color:#000000;
    background-color: snow;
}

b:hover {
    color:#000000;
    background-color: green;
}

c:hover {
    color:#000000;
    background-color: yellow;
}

d:hover {
    color:#000000;
    background-color: red;
}

.mainbackground {
	background-image: url('https://i.pinimg.com/originals/5a/64/63/5a6463e51b284bfcbc34869dc72cf0cd.gif');
	background-size:100%;
	background-repeat:repeat;
}

.levelBackground {
	background-image: url('https://i.pinimg.com/originals/fa/dc/b2/fadcb24075acb650de29f258af69d830.gif');
	background-size:100%;
	background-repeat:repeat;
}

.difButton {
    position:relative;
    font-size:x-large;
    color:#FFFFFF;
    background-color: #ff66aa;
    text-align:center;
    top: 50%;
    left: 30%;
    width:40%;
    border:none;
    display:block-inline;
    padding:50px;
    margin-bottom:50px;
    text-decoration: none;
    cursor:pointer;
}

.title {
    position:relative;
    top: 30%;
    left: 40%;
    width: 20%;
    height: 20%;
    text-align: center;
}

.title:after{
  content: '';
  position: absolute;
  top: -20px;
  left: -15px;
  right: -15px;
  bottom: -20px;
  border: red 2px solid;
}

.titleimg{
    position:absolute;
    top: 25%;
    right: 50%;
}

.topnav{
    overflow: hidden;
    background: #bf1f66;
    position: relative;
}

.topnav a {
  float: left;
  color: #f2f2f2;
  background-color: #ff66aa;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 30px;
}

.topnav a:hover, .dropdown:hover .account {
  background-color: #ddd;
  color: black;
}

.topnav a.active {
  background-color: #4CAF50;
  color: white;
}

.topnav-centered ul {
  display: inline;
  list-style-type: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin:0;
}
.topnav-centered li {
  float: left;
}
.topnav-centered a {
  display: block;
}

.bottombar{
  position: fixed;
  overflow: hidden;
  bottom: 0;
  text-align: center;
  background: #bf1f66;
  width: 100%;
  padding: 20px;
}
.ripoff{
  float: left;
  padding: 0;
  padding-left: 10px;
  margin: 0;
}

.grid-container {
  position: fixed;
  top: 40%;
  right: 37%;
  display: grid;
  grid-template-columns: auto auto auto;
  background-color: #bf1f66;
  padding: 10px;
}

.grid-item {
  background-color: rgba(255, 102, 170, 0.8);
  border: 1px solid rgba(0, 0, 0, 0.8);
  padding: 20px;
  font-size: 30px;
  text-align: center;
}

.gamediv {
  display: block;
  padding: 0;
  margin: auto;
  width: 750px;
  height: 750px;
  position: absolute;
  top:40px;
  bottom:0;
  left:0;
  right:0;
}

.dropdown{
  overflow: hidden;
  float: right;
}

.dropdown .account{
  font-size:30px;
  border:none;
  outline: none;
  color:white;
  padding:14px 16px;
  background-color: #ff66aa;
  font-family: inherit;
  margin: 0;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  float: none;
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

.dropdown-content a:hover {
  background-color: #ddd;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.login{
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
  width: 300px;
  height: 200px;
  padding: 10px;
  background-color: white;
}

.login-title{
  position: relative;
  font-size: xx-large;
}

.login-header{
  position: relative;
  margin: 25px 10px 0px;
}

.login-buttons{
  position: relative;
  left: 10px;
  top: -10px;
  padding: 5px;
  margin: 0px 10px;
}

.signup-button{
  position: relative;
  padding: 5px;
  width: 80%;
  left: 10%;
}

